[package]
name = "multiverse9ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.1"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
multiverse9core = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
pprof = { version = "0.11.1", features = ["flamegraph", "cpp", "prost-codec", "protobuf-codec", "frame-pointer", "criterion"] }

[[bin]]
name = "multiverse9ctl"
bench = false
path = "main.rs"
